Use explicit wav reader struct passed as argument
Does not work correctly to convert wav files to midi.

--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@ project('gwave-analyzer', 'c', version: '0.1.0', default_options : ['c_std=gnu99
 cc = meson.get_compiler('c')
 m_dep = cc.find_library('m', required : false)
 
-gwave_src = ['main.c', 'comune.c', 'wtm.c']
+gwave_src = ['main.c', 'comune.c', 'fourier.c', 'wav_reader.c', 'wtm.c']
 
 executable('gwave', gwave_src,
            include_directories: [], dependencies: m_dep,
