Return error codes on wav header errors
Previous method was writing on a string and it was unclear.

# Conflicts:
#	wav_reader.c

--- a/meson.build
+++ b/meson.build
@@ -7,7 +7,7 @@ endif
 cc = meson.get_compiler('c')
 m_dep = cc.find_library('m', required : false)
 
-gwave_src = ['main.c', 'comune.c', 'fourier.c', 'wav_reader.c', 'wtm.c']
+gwave_src = ['debug_log.c', 'main.c', 'comune.c', 'fourier.c', 'wav_reader.c', 'wtm.c']
 
 executable('gwave', gwave_src,
            include_directories: [], dependencies: m_dep,
