Add meson build for libui stub user's interface

--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
-project('gwave-analyzer', 'c', version: '0.1.0', default_options : ['c_std=gnu99'])
+project('gwave-analyzer', ['c', 'cpp'], version: '0.1.0', default_options : ['c_std=gnu99'])
 
 if host_machine.system() == 'windows'
-    add_global_arguments('-DWIN32', language : 'c')
+    add_global_arguments('-DWIN32', language : ['c', 'cpp'])
 endif
 
 cc = meson.get_compiler('c')
@@ -9,6 +9,16 @@ m_dep = cc.find_library('m', required : false)
 
 gwave_src = ['debug_log.c', 'main.c', 'comune.c', 'fourier.c', 'wav_reader.c', 'wtm.c']
 
+libui = dependency('libui')
+
 executable('gwave', gwave_src,
            include_directories: [], dependencies: m_dep,
+           gui_app: false)
+
+# The dummy.cpp file is there to force the linker to use g++ because
+# libui needs C++ linking.
+gwave_ui_src = ['ui-main.c', 'dummy.cpp']
+
+executable('gwave-ui', gwave_ui_src,
+           include_directories: [], dependencies: [libui, m_dep],
            gui_app: true)
